[package]
name = "molar_system"
version = "0.1.0"
authors = ["OptimisticAtom <optimisticatom@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.2"
gl = "0.10.0"
nalgebra = "0.18"
imgui = "0.4.0"
