[package]
name = "game_objects"
version = "0.1.0"
authors = ["OptimisticAtom <optimisticatom@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18"
science = { path = "../science" }
gl_api = { path = "../gl_api" }
